--- a/Pastillero/res/layout/row_evento.xml
+++ b/Pastillero/res/layout/row_evento.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp"
-    android:background="@drawable/marco_abajo"
+    android:background="@drawable/transicion"
     android:orientation="vertical"
     android:padding="5dp" >
 
@@ -13,6 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:background="@color/color_base"
+        android:padding="5dp"
+        android:textColor="@color/color_blanco"
         android:text="TITULO " />
 
     <LinearLayout
@@ -21,7 +24,7 @@
         android:padding="5dp" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/row_evento_tv_inicio_base"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
@@ -43,7 +46,7 @@
         android:padding="5dp" >
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/row_evento_tv_fin_base"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
@@ -65,7 +68,7 @@
         android:padding="5dp" >
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/row_evento_tv_hora_base"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
@@ -87,7 +90,7 @@
         android:padding="5dp" >
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/row_evento_tv_tiempo_base"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".5"
