--- a/Pastillero/res/layout/main_pastillero.xml
+++ b/Pastillero/res/layout/main_pastillero.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <!-- The main content view -->
 
@@ -21,6 +21,7 @@
         android:background="@android:color/black"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+        android:dividerHeight="0dp"
+        android:listSelector="@android:color/transparent" />
 
 </android.support.v4.widget.DrawerLayout>
