--- a/Pastillero/res/layout/list_simple.xml
+++ b/Pastillero/res/layout/list_simple.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="5dp" >
+ >
 
     <TextView
         android:id="@+id/list_simple_tv_texto"
@@ -11,7 +11,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="5dp"
-        android:padding="5dp"
+        android:paddingTop="15dp"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:paddingBottom="15dp"
+        android:gravity="center"
+        android:background="@drawable/marco_negro_trans"
         android:textColor="@android:color/white"
         android:layout_weight=".7"
         android:text="TextView" />
