arreglo bug notificaciones

--- a/Pastillero/res/values/arrays.xml
+++ b/Pastillero/res/values/arrays.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string-array name="nav_options">
-        <item>Mi Pastillero</item>
+        <item>Mis Medicinas</item>
+       <item>Mis Citas</item>
         <item>Acerca de</item>
     </string-array>
 
