--- a/Pastillero/res/layout/activity_splash.xml
+++ b/Pastillero/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_negro"
+    android:background="@drawable/marco_boton"
     tools:context="${relativePackage}.${activityClass}" >
 
     <FrameLayout
@@ -26,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="@string/app_name"
-        android:textColor="@color/color_blanco"
+        android:textColor="@color/color_negro"
         android:textStyle="bold"
         android:textSize="30sp" />
 
