--- a/Pastillero/res/layout/row_default_pastillero.xml
+++ b/Pastillero/res/layout/row_default_pastillero.xml
@@ -4,4 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center|bottom"
-    android:text="@string/sin_eventos" />
+    android:text="@string/sin_eventos_medicina" />
