--- a/Pastillero/res/layout/row_cita.xml
+++ b/Pastillero/res/layout/row_cita.xml
@@ -19,48 +19,15 @@
         android:text="TITULO " />
 
     <LinearLayout
+        android:id="@+id/ll_row_evento"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp" >
+        android:layout_height="wrap_content" 
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/row_cita_tv_inicio_base"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:text="@string/fecha_cita_" />
-
-        <TextView
-            android:id="@+id/row_cita_tv_inicio"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:gravity="left"
-            android:paddingLeft="5dp"
-            android:text="fecha" />
+      
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp" >
-
-        <TextView
-            android:id="@+id/row_cita_tv_hora_base"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:text="@string/hora_cita_" />
-
-        <TextView
-            android:id="@+id/row_cita_tv_hora"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight=".5"
-            android:gravity="left"
-            android:paddingLeft="5dp"
-            android:text="hora" />
-    </LinearLayout>
+       
 
    
 
